<resources>
    <string name="app_name">Art Supplies</string>
    <!-- Main Activity strings -->
    <string name="welcomeMain">Art Supplies for You</string>
    <string name="coloredPencils">colored pencils</string>
    <string name="btnClickMain">Click to Browse Our Products</string>
    <string name="searchHint">Search</string>

    <!-- Product List Activity strings -->
    <string name="listOfProducts">Products We Carry</string>
    <string name="clickInstructions">Click on any item to view details.</string>
    <string name="btn_toMain">Home</string>
    <string name="btn_toCart">View Cart</string>
    <string name="stuff">Products go here</string>
    <string name="nope">No items found. Please search by name of item only.</string>
    <!-- Item Listing strings -->
<string name="add_cart">Add to Cart</string>


    <!-- Shopping Cart strings -->
    <string name="txtView_shopping_cart">Shopping Cart</string>
    <string name="clear">Clear cart</string>
    <string name="delete">Delete item</string>
    <string name="checkout">I\'m ready to check out</string>
    <string name="update">Update Cart</string>


    <!-- format: <string name="name">text</string>   -->

</resources>
