<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andreakim.artsupplies.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcomeMain"
        android:id="@+id/txt_main_welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:contentDescription="@string/coloredPencils"
        android:scaleType = "centerCrop"
        android:src="@drawable/pencils"
        android:layout_below="@+id/txt_main_welcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnClickMain"
        android:background="#FD97FA"
        android:id="@+id/btn_main"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />


</RelativeLayout>
