<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andreakim.artsupplies.ProductsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/listOfProducts"
        android:id="@+id/tv_prods"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="370dp"
        android:id="@+id/listViewProducts"
        android:layout_below="@+id/tv_prods"
        android:paddingBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/clickInstructions"
        android:id="@+id/clickProd"
        android:paddingTop="12dp"
        android:layout_below="@+id/listViewProducts"
        android:layout_alignRight="@+id/tv_prods"
        android:layout_alignEnd="@+id/tv_prods" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_toMain"
        android:id="@+id/btn_toMain"
        android:padding="8dp"
        android:background="@color/colorButtons"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:clickable="true"
        android:src="@drawable/ic_cart_blk"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/listViewProducts"
        android:layout_alignEnd="@+id/listViewProducts"
        android:id="@+id/fab_products" />
</RelativeLayout>
